# marbles-system1

./: faqs-micropython.md  pico_sdk_import.cmake
examples/: CMakeLists.txt
examples/automation2040w/: README.md
examples/badger2040/: badger2040_image_demo_images.hpp
examples/breakout_as7262/: basic_demo.cmake  basic_demo.cpp  explorer_bargraph.cmake  explorer_bargraph.cpp
examples/breakout_bh1745/: demo.cpp
examples/breakout_bme688/: bme688_parallel.cpp
examples/breakout_colourlcd240x240/: CMakeLists.txt  colorlcd_240x240_demo.cpp
examples/breakout_encoder/: demo.cpp
examples/breakout_ioexpander/: CMakeLists.txt
examples/breakout_matrix11x7/: CMakeLists.txt  demo.cpp
examples/breakout_mics6814/: CMakeLists.txt
examples/breakout_mlx90640/: CMakeLists.txt  demo.cpp
examples/breakout_oled_128x128/: CMakeLists.txt
examples/breakout_pms5003/: CMakeLists.txt  pmsa003i_demo.cpp
examples/breakout_pmw3901/: CMakeLists.txt
examples/breakout_potentiometer/: CMakeLists.txt
examples/breakout_roundlcd/: CMakeLists.txt  roundlcd_demo.cpp
examples/breakout_rtc/: CMakeLists.txt
examples/breakout_scd41/: CMakeLists.txt  scd41_demo.cpp
examples/breakout_sgp30/: demo.cpp
examples/cosmic_unicorn/: CMakeLists.txt  audio_samples.cpp  cosmic_eighties_super_computer.cpp  cosmic_lava_lamp.cpp  cosmic_rainbow.cpp  cosmic_rainbow_text.cpp  cosmic_scroll_text.cpp
examples/encoder/: README.md  encoder_item_selector.cpp  encoder_read_change.cpp  encoder_read_counts.cpp
examples/galactic_unicorn/: CMakeLists.txt  audio_samples.cpp  balls.cpp  feature_test.cpp  (+6 more)
(+831 files in other folders)
